--- a/style.css
+++ b/style.css
@@ -128,6 +128,7 @@ main {
 #grid-section{
     display: grid;
     grid-template-columns: 1fr 1fr;
+    margin-bottom: 7.25rem;
 }
 
 
@@ -179,6 +180,10 @@ footer{
     width: 100%;
     height: 7.25rem;
     background: #00CD39;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    
 }
 .footer > p{
     
