--- a/efeitos.css
+++ b/efeitos.css
@@ -36,3 +36,14 @@
 .plus{
     font-weight: bold;
 }
+
+.section-food:hover{
+  transform: scale(1.05);
+}
+.section-food{
+    padding: 10px 20px;
+    color: #fff; /* Cor do texto branco */
+    border: none;
+    cursor: pointer;
+    transition: transform 0.2s; 
+}
