--- a/style.css
+++ b/style.css
@@ -193,7 +193,7 @@ main {
     bottom: 18px;
 }
 #promocao{
-    max-width: 74%;
+    width: 251px;
     margin: 0 auto;
     position: relative;
 }
