--- a/style.css
+++ b/style.css
@@ -127,8 +127,9 @@ main {
 
 #grid-section{
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     margin-bottom: 2.25rem;
+    justify-items: center;
 }
 
 #grid-section-1{
@@ -193,7 +194,7 @@ main {
     bottom: 18px;
 }
 #promocao{
-    width: 300px;
+    max-width: 61%;
     margin: 0 auto;
     position: relative;
 }
@@ -233,7 +234,270 @@ footer{
 }
 .footer{
     text-align: center;
+    cursor: pointer;
+position: relative;
+}
+#qtd-item{
+    position: absolute;
+    bottom: 25px;
+    left: 44px;
+    width: 20px;
+    height: 20px;
+    background-color: red;
+    color: white;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 20px auto;
+    display: none;
 }
 .icons-footer {
     color: #FFF; /* Defina a cor desejada, neste caso, branco (#FFF) */
+}
+/*-------------------------------*/
+
+.card-box{
+    display: flex;
+    justify-content: center;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    width: 22rem;
+    height: 10.4375rem;
+    margin-top: 20px;
+    flex-shrink: 0;
+    background: #FFF;
+    border-radius: 0.9375rem;
+    align-items: center;
+    
+}
+
+.box-a{
+    display: flex; 
+    
+}
+svg{
+    cursor: pointer;
+}
+
+.box-b{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    text-align: center;
+    align-items: center;
+    margin-left: 10px;
+}
+.box-content{
+margin-left: 10px;
+}
+
+.card-box > div > img{
+    width: 7.86081rem;
+    height: 7.12806rem;
+    margin-left: 5px;
+    flex-shrink: 0;
+    border-radius: 0.9375rem;
+    background: url(<path-to-image>), lightgray 50% / cover no-repeat;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+.descricao{
+    color: #00FF1A;
+    font-family: sans-serif;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin: 10px 0px;
+}
+.price{
+    color: #000;
+    font-family: Inter;
+    font-size: 1.25rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+
+.botan {
+    width: 6.6875rem;
+    height: 2.6875rem;
+    font-family: sans-serif;
+    font-weight: 700;
+    flex-shrink: 0;
+    border-radius: 2rem;
+    background: #14FF00;
+    display: inline-block;
+    color: #FFF;
+    text-decoration: none;
+    line-height: 2.6875rem; /* Centraliza verticalmente o texto */
+    text-align: center; /* Centraliza horizontalmente o texto */
+}
+
+/* #pedido-section {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 10;
+  } */
+  .pedido-card {
+    display: flex;
+    align-items: center;
+    border: 1px solid #fff;
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 10px;
+    background: #fff;
+}
+
+.pedido-imagem {
+    width: 100px;
+    height: auto;
+    margin-right: 20px;
+}
+
+.pedido-info {
+    flex-grow: 1;
+}
+
+.pedido-descricao {
+    font-size: 18px;
+    margin-bottom: 5px;
+}
+
+.pedido-preco {
+    font-size: 16px;
+    margin-bottom: 5px;
+}
+
+.pedido-quantidade {
+    font-size: 14px;
+    color: #979797;
+}
+.botan{
+    cursor: pointer;
+}
+
+
+.cart--finalizar {
+    padding:20px 30px;
+    border-radius:20px;
+    background-color:#48d05f;
+    color:#FFF;
+    cursor:pointer;
+    text-align:center;
+    margin-top:20px;
+    border:2px solid #63f77c;
+    transition: all ease .2s;
+}
+.cart--finalizar:hover {
+    background-color:#35af4a;
+}
+
+@media (max-width:1000px) {
+    .pizza-area {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width:840px) {
+    body {
+        flex-direction: column;
+    }
+    .pizza-area {
+        display:block;
+    }
+    .pizza-item {
+        max-width:100%;
+    }
+    header {
+        display:flex;
+    }
+    main {
+        padding-top:60px;
+    }
+
+
+}
+/* Estilos para o elemento aside */
+.mostrar{
+    display: block !important;
+}
+.sair{
+    display: none !important;
+}
+
+.container-aside {
+    background-color: #00FF47;
+    width: 92vw;
+    font-family: 'Hepta Slab', Helvetica, Arial;
+    transition: all ease .2s;
+    overflow-x: hidden;
+    padding: 20px;
+
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 10;
+    display: none;
+}
+
+/* Estilos para o cabeçalho h1 */
+h1 {
+    font-size: 24px;
+    color: #fff;
+}
+
+/* Estilos para os itens do carrinho */
+.cart--item {
+    display: flex;
+    align-items: center;
+    margin: 10px 0;
+}
+
+.cart--item img {
+    width: 40px;
+    height: 40px;
+    margin-right: 20px;
+}
+
+/* Estilos para os itens de subtotal, desconto e total */
+.cart--totalitem {
+    padding: 15px 0;
+    border-top: 1px solid #79b9dd;
+    color: #315970;
+    display: flex;
+    justify-content: space-between;
+    font-size: 15px;
+}
+
+.cart--totalitem span:first-child {
+    font-weight: bold;
+}
+
+.cart--totalitem.big {
+    font-size: 20px;
+    color: #000;
+    font-weight: bold;
+}
+
+/* Estilos para o botão de finalizar compra */
+.cart--finalizar {
+    padding: 20px 30px;
+    border-radius: 20px;
+    background-color: #48d05f;
+    color: #fff;
+    cursor: pointer;
+    text-align: center;
+    margin-top: 20px;
+    border: 2px solid #63f77c;
+    transition: all ease .2s;
+}
+
+.cart--finalizar:hover {
+    background-color: #35af4a;
+}
+.menu-closer{
+    cursor: pointer;
 }
